Pushed the running project with custom component

--- a/src/demo-app/demo-app/demo-app.html
+++ b/src/demo-app/demo-app/demo-app.html
@@ -2,6 +2,9 @@
   <md-sidenav #start>
     <md-nav-list>
       <a md-list-item [routerLink]="['button']">Button</a>
+      <a md-list-item [routerLink]="['custombutton']">Custom Button</a>
+      <a md-list-item [routerLink]="['custominputcomponent']">Custom Input Component</a>
+      <a md-list-item [routerLink]="['text']">Custom Text Component</a>
       <a md-list-item [routerLink]="['button-toggle']">Button Toggle</a>
       <a md-list-item [routerLink]="['card']">Card</a>
       <a md-list-item [routerLink]="['checkbox']">Checkbox</a>
