Added the flipper component

--- a/src/demo-app/text/text-demo.html
+++ b/src/demo-app/text/text-demo.html
@@ -1,5 +1,5 @@
 <div class="text-demo">
 <section>
-    <md-text>Material Text Component</md-text>
+    <md-text>{{title}}</md-text>
 </section>
 </div>
